# todds_timer

./: README.md  examples.py  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/todds_timer/: __init__.py  todds_timer.py
tests/: test_timer.py
