[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "todds_timer"
version = "2024.09.04"
authors = [
  { name="Todd", email="73101886+tch521@users.noreply.github.com" },
]
description = "A custom timer utility for Python"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/tch521/todds_timer"
"Bug Tracker" = "https://github.com/tch521/todds_timer/issues"